
#------------------------------------------------------------------------------
# Define CMake requirements
#
cmake_minimum_required(VERSION 2.6)





#------------------------------------------------------------------------------
# Add the source subdirectory 

add_subdirectory( libbrachy)
add_subdirectory( phys_dat)
add_subdirectory( brachy )
add_subdirectory(brachy_dose)





