
#------------------------------------------------------------------------------
# Define CMake requirements
#
cmake_minimum_required(VERSION 2.6)





#------------------------------------------------------------------------------
# Add the source subdirectory 

add_subdirectory( libbrachy)
add_subdirectory( testRun )
#add_subdirectory(brachy_dose)





